--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
             <input type="checkbox" id="nav-toggle" class="nav-toggle">
             <nav>
                 <ul class="nav-font">
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#aboutme">About me</a></li>
-                    <li><a href="#projects">Projects</a></li>
-                    <li><a href="#contact">Contact</a></li>
+                    <li class="hoverunder"><a href="#">Home</a></li>
+                    <li class="hoverunder"><a href="#aboutme">About me</a></li>
+                    <li class="hoverunder"><a href="#projects">Projects</a></li>
+                    <li class="hoverunder"><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
             <label for="nav-toggle" class="nav-toggle-label">
@@ -32,7 +32,7 @@
                         <img class="profil" src="images/profil.png" alt="Picture of Emil">
                     </div>
                     <div>
-                        <h3 class="font-white" id="intro">Hi! My name is Emil. <br> Im an up and coming frontend developer. <br>Hope you enjoy your stay!</h3>
+                        <h3 class="font-white" id="intro">Hi! My name is Emil. <br> I am an up and coming frontend developer. <br>Hope you enjoy your stay!</h3>
                     </div>
                 </div>
             </section>
@@ -54,7 +54,7 @@
                 <div class="container">
                     <h2 class="font-green">About me</h2>
                     <div class="split">
-                        <div><p class="font-green" id="about-me">Hi! My name is Emil, I'm 21 years old and studying in Odense. I'm an aspiring front end developer trying to find my place in the market. I have a passion for coding in HTML and CSS and I am hoping to learn javascript later on down the road. I also have an interest in creating content. I´m experienced in most Adobe programs, but i also enjoy the practical work such as filming or taking photos. In my free time I´m a down to earth guy who loves either spending time with friends or perfecting my craft in my hobby, which happens to be coding.</p></div>
+                        <div><p class="font-green" id="about-me">Hi! My name is Emil, I am 21 years old and studying in Odense. I am an aspiring front end developer trying to find my place in the market. I have a passion for coding in HTML and CSS and I am hoping to learn javascript later on down the road. I also have an interest in creating content. I am experienced in most Adobe programs, but I also enjoy the practical work such as filming or taking photos. In my free time I am a down to earth guy who loves either spending time with friends or perfecting my craft in my hobby, which happens to be coding.</p></div>
                         <img class="profil2" src="images/profil2.png" alt="Picture of Emil">
                     </div>
                 </div>
@@ -86,12 +86,12 @@
                         <h2>Contact</h2>
                         <p>I am always ready to answer questions about my work or possible projects in the future</p>
                         <ul class="socials">
-                            <li><a href="">emilwaellind@gmail.com</a></li>
-                            <li><a href="">+45 42544888</a></li>
+                            <li><a class="exo" href="">emilwaellind@gmail.com</a></li>
+                            <li><a class="exo" href="">+45 42544888</a></li>
                         </ul>
                     </div>
                     <div class="footer-bottom">
-                        <p>Copyright © 2022 lind.gg</p>
+                        <p class="exo">Copyright © 2022 lind.gg</p>
                     </div>
                 </footer>
             </section>
