--- a/projekt4.html
+++ b/projekt4.html
@@ -32,8 +32,8 @@
                 </div>
                 <div class="line"></div>
                 <div class="split-images">
-                    <img class="center-image" src="images/code1.JPG" alt="picture of redesign">
-                    <img class="center-image" src="images/code2.JPG" alt="picture of redesign">
+                    <img class="center-image" src="images/code1.JPG" alt="picture of code">
+                    <img class="center-image" src="images/code2.JPG" alt="picture of code">
                 </div>
             </section>
         </div>
