--- a/projekt1.html
+++ b/projekt1.html
@@ -16,7 +16,7 @@
                 <ul class="nav-font">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="index.html#aboutme">About me</a></li>
-                    <li><a href="lind.gg#projects">Projects</a></li>
+                    <li><a href="index.html#projects">Projects</a></li>
                     <li><a href="index.html#contact">Contact</a></li>
                 </ul>
             </nav>
