--- a/projekt4.html
+++ b/projekt4.html
@@ -42,7 +42,7 @@
                 <footer>
                     <div class="footer-content">
                         <h2>Contact</h2>
-                        <p>I am always ready to answer questions about my work or possible projects in the future</p>
+                        <p>I am always ready to answer questions about my work or possible projects in the future.</p>
                         <ul class="socials">
                             <li><a href="">emilwaellind@gmail.com</a></li>
                             <li><a href="">+45 42544888</a></li>
