--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 <footer>
                     <div class="footer-content">
                         <h2>Contact</h2>
-                        <p>I am always ready to answer questions about my work or possible projects in the future</p>
+                        <p>I am always ready to answer questions about my work or possible projects in the future.</p>
                         <ul class="socials">
                             <li><a class="exo" href="">emilwaellind@gmail.com</a></li>
                             <li><a class="exo" href="">+45 42544888</a></li>
