--- a/projekt5.html
+++ b/projekt5.html
@@ -14,10 +14,10 @@
             <input type="checkbox" id="nav-toggle" class="nav-toggle">
             <nav>
                 <ul class="nav-font">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="index.html#aboutme">About me</a></li>
-                    <li><a href="index.html#projects">Projects</a></li>
-                    <li><a href="index.html#contact">Contact</a></li>
+                    <li class="hoverunder"><a href="index.html">Home</a></li>
+                    <li class="hoverunder"><a href="index.html#aboutme">About me</a></li>
+                    <li class="hoverunder"><a href="index.html#projects">Projects</a></li>
+                    <li class="hoverunder"><a href="index.html#contact">Contact</a></li>
                 </ul>
             </nav>
             <label for="nav-toggle" class="nav-toggle-label">
